fixes Elements view . 'Show inherited' title in Computed Style panel has incorrect alignmen

--- a/weinre.server/web/client/inspector.css
+++ b/weinre.server/web/client/inspector.css
@@ -1703,7 +1703,7 @@ body.platform-windows .sidebar-pane-subtitle {
     margin-left: 0;
     margin-top: 0;
     margin-bottom: 0.25em;
-    vertical-align: bottom;
+    vertical-align: middle;
     /*Hack for IE - 'box-sizing: border-box' significantly reduce checkbox size so we set it to default*/
     box-sizing: content-box;
 }
